[workspace]
resolver = "2"
members = [
  "main-mod",
  "database-mod/ticker-details/io",
  "database-mod/ticker-details/impl",
  "database-mod/ticker-details/fixture",
  "snp-mod/io",
  "snp-mod/impl",
  "snp-mod/fixture",
  "policy-mod/io",
  "policy-mod/impl",
  "policy-mod/fixture",
  "network-mod/ticker-details/io",
  "network-mod/ticker-details/impl",
  "network-mod/ticker-details/fixture",
  "network-mod/trades/io",
  "network-mod/trades/impl",
  "network-mod/trades/fixture",
  "crawler-mod/ticker-details/io",
  "crawler-mod/ticker-details/impl",
]

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.dependencies]
thiserror = "1.0.58"
surrealdb = "1.2.2"
tokio-postgres = "0.7.10"
postgres_types = "0.2.6"
chrono = "0.4.35"
rstest = "0.18.2"
tokio = "1.36.0"
serde = "1.0.197"
serde_json = "1.0.108"
async-trait = "0.1.77"
reqwest = "0.11.26"
crossbeam = "0.8.4"

