[package]
name = "policy-mod-io"
version = "0.1.0"
edition = "2021"
description = "Input & output module for handling request rate"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true

