[package]
name = "crawler-mod-ticker-details-impl"
version = "0.1.0"
edition = "2021"
description = "Implementation module for crawling ticker details"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
crawler-mod-ticker-details-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
policy-mod-io = { path = "../../../policy-mod/io" }
network-mod-ticker-details-io = { path = "../../../network-mod/ticker-details/io" }
database-mod-ticker-details-io = { path = "../../../database-mod/ticker-details/io" }
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
snp-mod-fixture = { path = "../../../snp-mod/fixture" }
policy-mod-fixture = { path = "../../../policy-mod/fixture" }
network-mod-ticker-details-fixture = { path = "../../../network-mod/ticker-details/fixture" }
database-mod-ticker-details-fixture = { path = "../../../database-mod/ticker-details/fixture" }
tokio = { workspace  = true, features = ["macros", "rt-multi-thread"] }

