[package]
name = "database-mod-ticker-details-fixture"
version = "0.1.0"
edition = "2021"
description = "Fixture module for handling database for ticker details"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
database-mod-ticker-details-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace =  true

