[package]
name = "database-mod-ticker-details-impl"
version = "0.1.0"
edition = "2021"
description = "Implementation module for handling database for ticker details"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
database-mod-ticker-details-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace = true, features = ["derive", "rc"] }
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }

[dev-dependencies]
snp-mod-fixture = { path = "../../../snp-mod/fixture" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

