[package]
name = "network-mod-ticker-details-fixture"
version = "0.1.0"
edition = "2021"
description = "Fixture module for handling network for ticker details"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
network-mod-ticker-details-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace =  true

