[package]
name = "network-mod-ticker-details-impl"
version = "0.1.0"
edition = "2021"
description = "Implementation module for handling network for ticker details"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
network-mod-ticker-details-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
snp-mod-fixture = { path = "../../../snp-mod/fixture" }
rstest.workspace =  true
tokio = { workspace  = true, features = ["macros", "rt-multi-thread"] }

