[package]
name = "network-mod-trades-fixture"
version = "0.1.0"
edition = "2021"
description = "Fixture module for handling network for trades"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
network-mod-trades-io = { path = "../io" }
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace =  true

