[package]
name = "network-mod-trades-io"
version = "0.1.0"
edition = "2021"
description = "Input & outut module for handling network for trades"
license = "MIT license"
repository = "https://github.com/hadilq/rust-polygon-io-crawler"

[dependencies]
snp-mod-io = { path = "../../../snp-mod/io" }
serde = { workspace  = true, features = ["derive", "rc"] }
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
crossbeam.workspace = true

